@@ -321,7 +321,7 @@ public class Position extends Message {
 
     public void setGeofenceIds(List<? extends Number> geofenceIds) {
         if (geofenceIds != null) {
-            this.geofenceIds = geofenceIds.stream().map(Number::longValue).collect(Collectors.toList());
+            this.geofenceIds = geofenceIds.stream().map(Number::longValue).toList();
         } else {
             this.geofenceIds = null;
         }
