@@ -45,7 +45,7 @@ public class T622IridiumProtocolDecoder extends BaseProtocolDecoder {
                 getCacheManager(), Keys.PROTOCOL_FORMAT.withPrefix(getProtocolName()), deviceId);
         return Arrays.stream((value != null ? value : format).split(","))
                 .map(s -> Integer.parseInt(s, 16))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void setFormat(String format) {
