@@ -60,7 +60,7 @@ public class CombinedReportProvider {
             var positions = PositionUtil.getPositions(storage, device.getId(), from, to);
             item.setRoute(positions.stream()
                     .map(p -> new double[] {p.getLongitude(), p.getLatitude()})
-                    .collect(Collectors.toList()));
+                    .toList());
             var events = storage.getObjects(Event.class, new Request(
                     new Columns.All(),
                     new Condition.And(
@@ -69,13 +69,13 @@ public class CombinedReportProvider {
                     new Order("eventTime")));
             item.setEvents(events.stream()
                     .filter(e -> e.getPositionId() > 0 && !EXCLUDE_TYPES.contains(e.getType()))
-                    .collect(Collectors.toList()));
+                    .toList());
             var eventPositions = events.stream()
                     .map(Event::getPositionId)
                     .collect(Collectors.toSet());
             item.setPositions(positions.stream()
                     .filter(p -> eventPositions.contains(p.getId()))
-                    .collect(Collectors.toList()));
+                    .toList());
             result.add(item);
         }
         return result;
